# karbonit

./: .gitignore  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  DONORS.md  Doxyfile  FOR_RESEARCHERS.md  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE  MAINTAINERS  Makefile  NEWS.md  README.md  SPECIFICATION.md  SPECIFICATION_COMPACT.md  THANKS  VERSION_CURRENT  VERSION_RELEASED  cmake_install.cmake  karbonit.cbp  somefile.sql.in
Testing/Temporary/: CTestCostData.txt
bench/: CMakeLists.txt  Makefile  cmake_install.cmake
bench/carbon/src/core-ops/unmanaged/reads/bson/libbson/: CMakeLists.txt  Makefile  bench-reads-libbson.cbp  cmake_install.cmake  main.c
bench/carbon/src/core-ops/unmanaged/reads/carbon/libcarbon/: CMakeLists.txt  main.c
bench/json/: CMakeLists.txt
bench/json/fast-parse/: CMakeLists.txt  main.cpp
book/: README.md
book/jakson-devdocs/latest/: book.toml
docs/: archive-spec.html  carbon.html  dev-ressources.html  feedback.html  format-spec.html  formatting.html  getting-started.html  index.html  indexing.html  introduction.html  libcarbon.html  print.html  searchindex.js  thanks.html  traversals-queries.html  update-spec.html
docs/dev-ressources/: best-practise.html  example-files.html  libraries.html
docs/format-specs/: alternatives.html  container-types.html  data-types.html  design-goals.html  format-overview.html  identification.html  mime-types.html  notation.html
docs/format-specs/alternatives/: bson.html  ubjson.html
docs/format-specs/container-types/: arrays.html  columns.html  objects.html
docs/format-specs/data-types/: binary-strings.html  booleans.html  character-strings.html  floating.html  integers.html  nils.html  nulls.html
docs/format-specs/format-overview/: bnf-syntax.html  marker-format.html  padding-spaces.html  varuints.html
docs/format-specs/identification/: sys-def-keys.html  user-def-keys.html
docs/formatting/: json.html  lax-json.html
docs/getting-started/: comparison.html  example.html  motivation.html
docs/indexing/: path-indexes.html
docs/traversals-queries/: dot-path-expressions.html  path-functions.html
docs/update-spec/: atomic-ops.html  delete-ops.html  insert-ops.html  revision-control.html  update-ops.html
examples/: Makefile  cmake_install.cmake  examples.cbp
examples/carbon-api/: Makefile  carbon-api-examples.cbp  cmake_install.cmake
examples/carbon-api/browse-contents/: CMakeLists.txt  Makefile  read-record-contents.c
examples/carbon-api/construct-carbon-records/: Makefile  carbon-api-examples-construct-carbon-records.cbp  cmake_install.cmake
examples/carbon-api/project-setup/: CMakeLists.txt  Makefile  carbon-api-examples-project-setup.cbp  hello-carbon.c
include/karbonit/: karbonit.c  karbonit.h
libs/duktape/: duk_config.h  duktape.c  duktape.h
libs/jansson/: dump.c  hashtable.c  hashtable.h  hashtable_seed.c  jansson.def  jansson.h  jansson_private.h  load.c  pack_unpack.c  strbuffer.c  value.c
libs/ubjsc/: ubjs.c  ubjs_common.c  ubjs_common_prv.h  ubjs_exports.h  ubjs_glue_array_array.h  ubjs_glue_array_array_prv.h  ubjs_glue_dict_list.c  ubjs_glue_dict_list.h  ubjs_glue_dict_list_prv.h  ubjs_library.c  ubjs_library.h  ubjs_library_prv.h  ubjs_parser.h  ubjs_parser_processors.c  ubjs_parser_prv.h  ubjs_primitive_array.h  ubjs_primitive_array_prv.h  ubjs_primitive_char.c  ubjs_primitive_char.h  ubjs_primitive_char_prv.h  ubjs_primitive_false.c  ubjs_primitive_false.h  ubjs_primitive_false_prv.h  ubjs_primitive_float32.c  ubjs_primitive_float32.h  ubjs_primitive_float32_prv.h  ubjs_primitive_float64.c  ubjs_primitive_float64.h  ubjs_primitive_float64_prv.h  ubjs_primitive_hpn.h  ubjs_primitive_hpn_prv.h  ubjs_primitive_int16.c  ubjs_primitive_int16.h  ubjs_primitive_int16_prv.h  ubjs_primitive_int32.c  ubjs_primitive_int32.h  ubjs_primitive_int32_prv.h  ubjs_primitive_int64.c  ubjs_primitive_int64.h  ubjs_primitive_int64_prv.h  (+24 more)
src/carbon/: archive.c  archive.h  carbon.c  carbon.h  error.c  error.h  fn_result.c  fn_result.h  forwdecl.h  hexdump.c  hexdump.h  stdinc.h  types.h
src/carbon/archive/: cache.c  cache.h  column_doc.c  column_doc.h  converter.c  converter.h  doc.c  doc.h  encode_async.c  encode_async.h  encode_sync.c  encode_sync.h  huffman.c  (+18 more)
src/jakson/: archive.c  archive.h  carbon.c  carbon.h  error.c  error.h  fn_result.c  fn_result.h  forwdecl.h  hexdump.c  hexdump.h  json.c  json.h  json_schema_cpp_c_connector.cpp  json_schema_cpp_c_connector.h  rec.c  rec.h  schema.c  schema.h  stdinc.h  types.h
src/karbonit/: archive.c  archive.h  error.c  error.h  hexdump.c  hexdump.h  json.c  json.h  rec.c  rec.h  stdinc.h  types.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests.cbp
tests/carbon/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test-abstract-type-markers.cpp  test-abstract-types-arrays.cpp  test-abstract-types-columns.cpp  test-abstract-types-objects.cpp  test-archive-converter.cpp  test-archive-iter.cpp  test-archive-ops.cpp  test-carbon-arr-it.cpp  test-carbon-from-json.cpp  test-carbon-item.cpp  test-carbon-obj-it.cpp  test-carbon-part-1.cpp  test-carbon-part-2.cpp  test-carbon-part-3.cpp  test-carbon-part-4.cpp  test-carbon-part-5.cpp  test-carbon-part-6.cpp  test-carbon-part-7.cpp  test-carbon-part-8.cpp  test-carbon-part-9.cpp  test-carbon-patch.cpp  test-carbon.cbp  test-carbon.cpp  test-fix-map.cpp  test-func-exists.cpp  test-func-get.cpp  test-func-rec-exists.cpp  test-func-rec-get.cpp  test-func-rec-set.cpp  test-global_id.cpp  test-json.cpp  test-mime.cpp  test-printer-json.cpp  test-printer-json2.cpp  test-printer-marker.cpp  test-schema.cpp  test-varuint.cpp  (+1 more)
tests/carbon/assets/: ms-academic-graph.json
tests/misc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test-fn-result.cpp  test-thread-pool.cpp
tools/: CMakeLists.txt  Makefile  ark-tools.cbp  cmake_install.cmake
tools/carbon-tool/: CMakeLists.txt  Makefile  cmake_install.cmake  karbonit-tool.cbp  main.c  modules.c  modules.h
tools/jakson-tool/: CMakeLists.txt  main.c  modules.c  modules.h
(+742 files in other folders)
